# EZFileConverter

./: .gitignore  Extending.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
audioconverter/: package.json
audioconverter/src/: AudioMode.js  index.js
dawconverter/: package.json
dawconverter/src/: DAWMode.js
dawconverter/src/parsers/: ableton.js  flstudio.js  logic.js  protools.js
engine/: package.json
engine/src/: BaseMode.js  ConversionEngine.js  Server.js  index.js
imageconverter/: package.json
imageconverter/src/: ImageMode.js  index.js
public/: audio.html  daw.html  index.html
public/css/: output.css  styles.css
public/js/: audio-converter.js  converter.js  daw-converter.js
src/: server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
